--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,9 +14,9 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true, //true显示外置的控制台窗口，false显示内置终端
+            "externalConsole": false, //true显示外置的控制台窗口，false显示内置终端
             "MIMode": "gdb",
-            "miDebuggerPath": "D:\\MinGW\\bin\\gdb.exe",
+            "miDebuggerPath": "D:\\Scoop\\apps\\winlibs-mingw-llvm-ucrt\\current\\bin\\gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
