--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": false, //true显示外置的控制台窗口，false显示内置终端
+            "externalConsole": true, //true显示外置的控制台窗口，false显示内置终端
             "MIMode": "gdb",
             "miDebuggerPath": "D:\\Scoop\\apps\\winlibs-mingw-llvm-ucrt\\current\\bin\\gdb.exe",
             "setupCommands": [
